app/src/home/main.sass
@import fonts
@import responsive-classes

$color-dark: #000
$color-light: #fff

*,
*::before,
*::after
  box-sizing: border-box

html
  font-size: 23px
  font-size: calc(8px + 1vw)
  font-size: calc(8px + 1vmax)

body
  background-color: $color-dark
  color: $color-light
  margin: 0

@import top-bar
@import member-info
@import map
@import contact
@import footer


#content-main
  display: none

  &.visible
    display: block


h1,
h2,
h3,
h4,
h5
  font-family: 'Montserrat'
  font-weight: bold
  margin: .5em 0

  &.center
    text-align: center

  &.caps
    text-transform: uppercase


h1
  font-size: 4rem

h2
  font-size: 3rem

h3
  font-size: 2.5rem

h4
  font-size: 2rem

h5
  font-size: 1.8rem

.headline
  font-size: 4.5rem
  letter-spacing: .1vw

  display: block
  width: 100vw
  margin: 0

  position: fixed
  left: 0
  top: 50vh
  z-index: 1
  transform: translateY(-50%)

  @media (orientation: portrait) and (max-width: 420px)
    font-size: 6rem
    text-align: left
    width: auto
    left: 50vw
    transform: translate(-50%, -50%)

    &.center
      text-align: left

  opacity: 0
  transition: 1.5s opacity

  &.visible
    opacity: 1

  // All subsequent elements should be on top. This can be overridden if needed
  & ~ *
    position: relative
    z-index: 2


canvas
  margin-top: 60vh

  width: 100%
  height: 80vh

  margin-bottom: -5px

  pointer-events: none
  -webkit-touch-callout: none

  // Pre-build properties: transparent and not transformed into view.
  transform: translateY(40vh)
  opacity: 0

  // During the build, the clouds will slide up and fade in
  transition: transform 3s, opacity 4s

  &.visible
    opacity: 1
    transform: none

div.mist-gradient
  position: absolute
  display: block
  top: 85vh
  height: 55vh
  width: 100vw

  // Fake an easing on gradient color interpolation. The gradient begins
     slowly, changes quickly in the middle, and ends slowly. These values
     were generated by the easeInOutQuad function implementation that I
     found at http://gizma.com/easing/.

  $c1:  transparentize($color-light,   1)
  $c2:  transparentize($color-light, .98)
  $c3:  transparentize($color-light, .92)
  $c4:  transparentize($color-light, .82)
  $c5:  transparentize($color-light, .68)
  $c6:  transparentize($color-light,  .5)
  $c7:  transparentize($color-light, .32)
  $c8:  transparentize($color-light, .18)
  $c9:  transparentize($color-light, .08)
  $c10: transparentize($color-light, .02)
  $c11: transparentize($color-light,   0)

  background: linear-gradient($c1 0%, $c2 10%, $c3 20%, $c4 30%, $c5 40%, $c6 50%, $c7 60%, $c8 70%, $c9 80%, $c10 90%, $c11 100%)

